--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@react-google-maps/api": "^2.20.6",
     "axios": "^1.7.9",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.0"
+    "react-router-dom": "^7.1.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
